Namespace set for ICalendarServlet